--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -2,8 +2,8 @@ name: hola mundo
 
 on: 
   workflow_dispatch:
-  # schedule:
-  #   - cron: "*/5 * * * *" # se ejecuta cada 5 minutos
+  schedule:
+   - cron: "*/5 * * * *" # se ejecuta cada 5 minutos
   # push:
   #   branches:
   #     - main
