--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -8,6 +8,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'codigo/**'
+      - '.github/workflows/hola-mundo.yml'
   pull_request:
     branches:
       - main
