--- a/.github/workflows/variables-y-secretos.yml
+++ b/.github/workflows/variables-y-secretos.yml
@@ -11,3 +11,12 @@ jobs:
         run: |
           echo "La variable es ${{vars.mi_variable}}"
           echo "El secreto es ${{secrets.CONNECTION_STRING}}"
+
+        # 
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+
+      - name: Correr codigo de JS
+        run: node main.js
+        env:
+          VARIABLE_CENTRALIZADA: ${{vars.mi_variable}}
